src/core/snapshots/vue_template_compiler__core__tokenizer__test__raw_text-2.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: "</styl"
    ops:
      bits: 0

