src/core/snapshots/vue_template_compiler__core__tokenizer__test__raw_text-9.snap
---
source: src/core/tokenizer.rs
expression: t

---
StartTag:
  name: style
  attributes: []
  self_closing: false

