src/core/snapshots/vue_template_compiler__core__tokenizer__test__rc_data-8.snap
---
source: src/core/tokenizer.rs
expression: a

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: "{{'</textarea>'}}"
- EndTag: textarea

