src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-10.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes:
      - name: "="
        value:
          content:
            raw: /
            ops:
              bits: 10
          location:
            start:
              offset: 6
              line: 1
              column: 7
            end:
              offset: 7
              line: 1
              column: 8
        name_loc:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 4
            line: 1
            column: 5
        location:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 7
            line: 1
            column: 8
    self_closing: false

