src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-11.snap
---
source: src/core/tokenizer.rs
expression: t

---
StartTag:
  name: a
  attributes:
    - name: "=123"
      value: ~
      name_loc:
        start:
          offset: 3
          line: 1
          column: 4
        end:
          offset: 7
          line: 1
          column: 8
      location:
        start:
          offset: 3
          line: 1
          column: 4
        end:
          offset: 8
          line: 1
          column: 9
  self_closing: true

